tests/snapshots/run_wpt_conformance__onnx_maxPool2d_float32_4D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "maxPool2d.https.any.js",
    "maxPool2d float32 4D tensor default options",
    "onnx",
    "PASS",
)
